test/failing/attribute_and_expression.ml
let _ = f (2 [@test 2])

let tail1 = ([1; 2])[@hello]
let tail2 = 0::(([1; 2])[@hello])
let tail3 = 0::(([])[@hello])
